# leopard

./: .dockerignore  .eslintrc.json  .gitignore  .pylintrc  Dockerfile  README.md  api.py  app.py  data_store.py  dataset_util.py  docker-compose.yml  docker_run.py  docker_runner.py  exec.py  faker.py  fastapi_util.py  html_util.py  image.py  pyproject.toml  run_eslint.sh  run_pylint.sh  run_test.sh  server.py  session.py  storage.py  storage_util.py  sysinfo.py  tensorboard.py  upload_util.py
.github/workflows/: eslint.yml  pytest.yml
app/: appinfo.json  base.py  manager.py
app/deepprivacy/: appinfo.json
app/diffusers/: appinfo.json
app/facenet/: README.md  appinfo.json
app/faker/: README.md  appinfo.json  faker_app.py  main.py
app/mia/: appinfo.json
app/mtcnn/: appinfo.json  main.py  mtcnn_app.py  server.py
app/mu-mia/: appinfo.json
app/pii/: appinfo.json
app/presidio/: README.md  appinfo.json  presidio_app.py
app/provenance/: appinfo.json
doc/: AppModule.md  Docker Web API.md  LP-HTML.md  SourceCodeSpec.md  Web API.md
tests/: test_api.py
tests/data/: storage.json
ui/dialog/: ask_messagebox.html  code_editor.html  filesave.html  fileupload.html  fileview.html  formdialog.html  input.html  logview.html  messagebox.html  select.html  testbox.html  testdlg.html
ui/fragment/: bs-script.html  code-highlight.html  codemirror.html  csv-grid.html  get-query-param.html  head.html  sidebar.html  topbar-demo.html  topbar.html
ui/page/: app_manager.html  compare.html  dataset.html  demo2.html  demo3.html  error.html  exec.html  face_detect.html  (+13 more)
(+307 files in other folders)
