[tool.poetry]
name = "leopard"
version = "0.1.0"
description = ""
authors = ["Hyungki Roh <hkroh@ingenio.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.1.2"
fastapi = "^0.99.1"
uvicorn = "^0.23.1"
python-multipart = "^0.0.6"
psutil = "^5.9.6"
fastapi-sessions = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
pytest-asyncio = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
